# ucpd-tools

./: Cargo.toml  README.md
analyzer-cbor/: Cargo.toml
analyzer-cbor/src/: lib.rs
src/: main.rs
stm32g071b-disco-firmware/: Cargo.toml  rust-toolchain.toml
stm32g071b-disco-firmware/.cargo/: config.toml
stm32g071b-disco-firmware/src/: main.rs  watch.rs
ucpd-capture/: Cargo.toml
ucpd-capture/src/: main.rs
