[package]
name = "stm32g071b-disco-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer-cbor = { version = "0.1.0", path = "../analyzer-cbor" }
byteorder = { version ="1.5.0", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"], git = "https://github.com/embassy-rs/embassy"  }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = ["stm32g071rb", "defmt", "memory-x", "time-driver-any",  "exti"] , git = "https://github.com/embassy-rs/embassy"  }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0" }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy" }
embedded-hal = "1.0.0"
embedded-io-async = "0.6.1"
ina226 = { version = "0.2.0", features = ["async"], git = "https://github.com/sjoerdsimons/ina226", branch = "asyncify" }
minicbor = "0.24.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# Hopefully temporary fork
usb-pd = { version = "0.0.1", git = "https://github.com/sjoerdsimons/usb-pd-rs", branch = "misc"}

[patch.crates-io]
embedded-hal = { git = "https://github.com/sjoerdsimons/embedded-hal", branch = "i2c-ref-async+fix-armv6-build" }
embedded-hal-async = { git = "https://github.com/sjoerdsimons/embedded-hal", branch = "i2c-ref-async+fix-armv6-build" }


[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
overflow-checks = true

[profile.dev]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
