[package]
name = "stm32g071b-disco-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer-cbor = { version = "0.1.0", path = "../analyzer-cbor" }
byteorder = { version ="1.5.0", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", version = "0.2.0" }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
# Need to use e.g. tim3 as it has multiple alarms available, due to running
# multiple executors that need timers
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["stm32g071rb", "defmt", "memory-x", "time-driver-tim3",  "exti"] }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.3.1"} 
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = { version = "0.2.0", features = [ "async" ] }
embedded-hal-async = { version = "1.0.0"}
embedded-io-async = "0.6.1"
heapless = { version = "0.8.0", features = ["ufmt"] }
ina226 = { version = "0.3.0", features = ["async"] }
minicbor = "0.24.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ssd1306 = { version = "0.8.4" , features = [ "async" ]}
ufmt = "0.2.0"
usb-pd = { git ="https://github.com/fmckeogh/usb-pd-rs/" }

[patch.crates-io]
# Fix for https://github.com/rust-embedded/embedded-hal/issues/598
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal-bus = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
# wip async support
ssd1306 = { git = "https://github.com/sjoerdsimons/ssd1306", branch="async" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
overflow-checks = true

[profile.dev]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
