[package]
name = "ucpd-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer-cbor = { version = "0.1.0", path = "../analyzer-cbor", features=["std"] }
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
minicbor = { version = "0.24.0", features = ["std"] }
serialport = "4.3.0"
uom = "0.36.0"
usb-pd = { version = "0.0.1", git = "https://github.com/sjoerdsimons/usb-pd-rs", branch = "parse-all-control-messages"}
